-фикс проблемы с jmv